--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,16 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+
+
+
+# Visual Studio 2015 cache/options directory
+.vs/
+.vscode/
+bower_components/
+node_modules/
+
+
+#Exclude tsc generated files
+*.map
+*.js
